# MGCP

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
demo/: demo_dna_pipeline.py  demo_utils.py
mgcp/: __init__.py
mgcp/binary/: GCP_Encode_binary.py  MGCP_Decode_Binary_p1.py  MGCP_Decode_Binary_p2.py  MGCP_Encode_Binary_p1.py  MGCP_Encode_Binary_p2.py  __init__.py  decode.py  encode.py
mgcp/binary/plotting/: error_rate_vs_coderate.py  error_rate_vs_pe.py
mgcp/cli/: __init__.py  binary_cli.py  codec_cli.py  dna_cli.py  main.py
mgcp/data/: __init__.py  codebook_binary.json  codebook_dna.json
mgcp/dna/: CalculateProbasDNA.py  GCP_Decode_DNA.py  GCP_Encode_DNA.py  MGCP_Decode_DNA_p1.py  MGCP_Decode_DNA_p2.py  MGCP_Encode_DNA_p1.py  MGCP_Encode_DNA_p2.py  __init__.py  decode.py  encode.py
mgcp/dna/codec/: MGCPcodec_Decode.py  MGCPcodec_Encode.py  __init__.py
mgcp/dna/plotting/: __init__.py  error_rate_vs_coderate.py  error_rate_vs_pe.py
mgcp/utils/: DNA_iid_channel.py  __init__.py  binary_channel.py  loader.py  tools.py
src/binary/: CalculateProbas.py  MGCP_Decode_p1.py  MGCP_Decode_p2.py  MGCP_Encode_p1.py  MGCP_Encode_p2.py  binary_channel.py  plotCoderate_MGCP.py  plotPe_MGCP.py
src/dna/: CalculateProbas.py  MGCP_Decode_DNA_p1.py  MGCP_Decode_DNA_p2.py  MGCP_Encode_DNA_p1.py  MGCP_Encode_DNA_p2.py  plotCoderate_MGCP_DNA.py  plotPe_MGCP_DNA.py
