[metadata]
name = mgcp
version = 1.1.0
description = MGCP: Error-correcting code for Binary and DNA Data Storage applications
long_description = file: README.md
long_description_content_type = text/markdown
author = Ramy Khabbaz
author_email = rami.khabbaz1@gmail.com
license = MIT
url = https://github.com/ramy-khabbaz/MGCP
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.21
    scipy>=1.7
    tqdm>=4.0
    typer>=0.4
    reedsolo>=1.5
    galois>=0.0.3
    matplotlib>=3.0
python_requires = >=3.9

include_package_data = True

[options.package_data]
mgcp.data =
    *.json

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    mgcp = mgcp.cli.main:main

[options.extras_require]
demo =
    kalign>=0.4
    py-cdhit>=0.1
    psutil>=5.0
